# MorphIO

./: .ContinousIntegration.cmake  .clang-format  .gitexternals  .gitignore  .gitmodules  .gitreview  .gitsubprojects  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS.txt  CHANGELOG  CHANGELOG.md  CHANGLOG.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Dockerfile  GNUmakefile  LICENSE.txt  MANIFEST.in  README  README.md  README.rst  appveyor.yml  build_wheel.sh  config.sh  cpp_test.sh  default.nix  docker.sh  neuron.swc  pyproject.toml  python_test.sh  requirements_docs.txt  result  setup.py  test.cpp
binds/python/: CMakeLists.txt  bind_enums.cpp  bind_enums.h  bind_immutable.cpp  bind_immutable.h  bind_misc.cpp  bind_misc.h  bind_mutable.cpp  bind_mutable.h  bind_soma.cpp  bind_soma.h  bind_vasculature.cpp  bind_vasculature.h  bind_warnings_exceptions.cpp  bind_warnings_exceptions.h  bindings_utils.cpp  bindings_utils.h  brion.cpp  docstrings.h  minimorph.cpp  morphio.cpp
brain/: CMakeLists.txt  api.h  circuit.cpp  circuit.h  compartmentReport.cpp  compartmentReport.h  compartmentReportFrame.cpp  compartmentReportFrame.h  compartmentReportMapping.cpp  compartmentReportMapping.h  compartmentReportReader.cpp  compartmentReportReader.h  compartmentReportView.cpp  compartmentReportView.h  enums.h  files.cmake  morphology.cpp  morphology.h  morphologyImpl.cpp  morphologyImpl.h  section.cpp  section.h  soma.cpp  soma.h  spikeReportReader.cpp  spikeReportReader.h  spikeReportWriter.cpp  spikeReportWriter.h  spikes.cpp  spikes.h  synapse.cpp  synapse.h  synapses.cpp  synapses.h  synapsesIterator.cpp  synapsesIterator.h  synapsesStream.cpp  synapsesStream.h  types.h
brain/cell/: morphology.cpp  morphology.h  morphologyImpl.cpp  morphologyImpl.h  section.cpp  section.h  soma.cpp  soma.h
brain/detail/: circuit.h  compartmentReport.h  compartmentReportReader.h  spikes.h  synapsesStream.h
brain/neuron/: morphology.cpp  morphology.h  morphologyImpl.cpp  morphologyImpl.h  section.cpp  section.h  soma.cpp  soma.h  types.h
brain/python/: CMakeLists.txt  arrayHelpers.cpp  arrayHelpers.h  arrayHelpers.inc  brain.cpp  circuit.cpp  compartmentReport.cpp  compartmentReportReader.cpp  helpers.cpp  helpers.h  numpy.h  spikeReportReader.cpp  spikeReportReader.h  spikeReportWriter.cpp  spikeReportWriter.h  spikes.cpp  spikes.h  submodules.cpp  submodules.h  synapses.cpp  test.cpp  types.h
brion/: CMakeLists.txt  api.h  blueConfig.cpp  blueConfig.h  circuit.cpp  circuit.h  compartmentReport.cpp  compartmentReport.h  compartmentReportPlugin.h  constants.h  defines.h  enums.h  exceptions.h  files.cmake  mesh.cpp  mesh.h  morphology.cpp  morphology.h  morphologyPlugin.h  morphologyPlugin.ipp  pluginInitData.h  spikeReport.cpp  spikeReport.h  spikeReportPlugin.h  synapse.cpp  synapse.h  synapseSummary.cpp  synapseSummary.h  target.cpp  target.h  types.h  version.h
brion/detail/: lockHDF5.cpp  lockHDF5.h  mesh.h  meshBinary.h  meshHDF5.h  silenceHDF5.h  skipWhiteSpace.h  utilsHDF5.h
brion/plugin/: CMakeLists.txt  compartmentReportBinary.cpp  compartmentReportBinary.h  compartmentReportCommon.cpp  compartmentReportCommon.h  compartmentReportDummy.cpp  compartmentReportDummy.h  compartmentReportHDF5.cpp  compartmentReportHDF5.h  compartmentReportMap.cpp  compartmentReportMap.h  compartmentReportNull.cpp  compartmentReportNull.h  morphologyHDF5.cpp  morphologyHDF5.h  morphologySWC.cpp  morphologySWC.h  morphologyZeroEQ.cpp  morphologyZeroEQ.h  spikeReportASCII.cpp  spikeReportASCII.h  spikeReportBinary.cpp  spikeReportBinary.h  spikeReportBluron.cpp  spikeReportBluron.h  spikeReportFile.cpp  spikeReportFile.h  spikeReportNEST.cpp  spikeReportNEST.h  spikeReportSimpleStreamer.cpp  spikeReportSimpleStreamer.h  spikeReportTypes.h
brion/python/: CMakeLists.txt
doc/: CMakeLists.txt  Changelog.md  Main.md  Makefile  README.md  build.sh  caching.md  environment.yml  index.html  specification.md  specification_neurolucida.md
doc/feature/: feature.md  (+8 more)
minimorph/: CMakeLists.txt  api.h  definesLinux.h  morphology.cpp  morphology.h  morphologyPlugin.h  morphologyPlugin.ipp
morphio/: CMakeLists.txt  __init__.py  api.h  morphology.cpp  morphology.h  morphologyImpl.cpp  morphologyImpl.h  section.cpp  section.h  soma.cpp  soma.h  types.h
pybindings/: C010306C.h5  CMakeLists.txt  _base.pxi  boost_numeric_ublas.pxd  datastructs.pxi  hadoken_geometry.pxd  morpho.pxd  morpho_h5_v1.pxd  morphology.py  morphotool.pyx  optional_mods.pxi  setup.py.in  stats.pxi  std.pxd  test_morpholog.py  test_mtool.py  unused_bindings.pyx_
python/: CMakeLists.txt  MANIFEST.in  README.txt  setup.py  setup.py.cmake
src/: CMakeLists.txt  api.h  cgal_mesher.cpp  collection.cpp  dendritic_spine.cpp  endoplasmic_reticulum.cpp  enums.cpp  errorMessages.cpp  error_message_generation.cpp  error_message_generation.h  error_warning_handling.cpp  glia.cpp  glial_cell.cpp  iterators.cpp  mesh_exporter.cpp  mesh_exporter.hpp  mito_iterators.cpp  mito_section.cpp  mitochondria.cpp  morpho-tool.cpp  morpho_mesher.hpp  morpho_spatial.cpp  morpho_spatial.hpp  morpho_tool.cpp  morphology.cpp  morphology.h  morphologyBrion.cpp  morphologyImpl.cpp  morphologyImpl.h  morphologyPlugin.h  morphologyPlugin.ipp  point_utils.cpp  point_utils.h  properties.cpp  section.cpp  sectionBuilder.cpp  section_base.tpp  shared_utils.cpp  shared_utils.hpp  soma.cpp  (+14 more)
tests/: CMakeLists.txt  __init__.py  blueConfig.cpp  circuit.cpp  compartmentReport.cpp  main.cpp  mesh.cpp  morphology.cpp  paths.h.in  requirement_tests.txt  simple.asc  simple.swc  spikeReport.cpp  spikeReportReaderWriter.cpp  spikeReportStreaming.cpp  spine.asc  synapse.cpp  synapseSummary.cpp  target.cpp  test_0_API.py  test_10_vasculature.py  test_11_collection.py  test_1_swc.py  test_2_neurolucida.py  test_3_h5.py  test_4_immut.py  test_5_mut.py  test_6_writers.py  test_7_modifiers.py  test_8_all_morphologies.py  test_9_surfaces.py  test_API.py  test_SWC.py  test_all_morphologies.py  test_collection.cpp  test_doc.py  test_enums.cpp  test_h5.py  test_helpers.h  test_immut.py  (+23 more)
(+473 files in other folders)
