[build-system]
requires = [
    "scikit-build-core",
    "setuptools_scm>=8",
    "cmake>=3.14",
    "ninja",
    "pybind11",
]
build-backend = "scikit_build_core.build"

[project]
name = "MorphIO"
description = "A neuron morphology IO library"
readme = "README.rst"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Blue Brain Project, EPFL" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: Apache Software License v2.0",
]
dynamic = ["version"]
#dependencies = [
#    "blueetl-core>=0.1.0",
#]

[tool.setuptools_scm]
#
#    install_requires=install_requires,
#    extras_require={
#        'docs': ['sphinx-bluebrain-theme'],
#    },
#    url='https://github.com/BlueBrain/MorphIO/',
#    ext_modules=[CMakeExtension('morphio._morphio'),
#                 ],
#    cmdclass={'build_ext': CMakeBuild,
#              },
#    packages=[],
#    license="LGPLv3",
#    zip_safe=False,
#    use_scm_version=True,
#    setup_requires=[
#        'setuptools_scm',
#    ],
#    python_requires=">=3.8",
#)

[tool.scikit-build]
cmake.targets = ["_morphio"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.packages = [ 'morphio', 'morphio.mut', 'morphio.vasculature' ]
cmake.args = [
    "-DHIGHFIVE_EXAMPLES=OFF",
    "-DHIGHFIVE_UNIT_TESTS=OFF",
    '-DMORPHIO_TESTS=OFF',
    ]
#sdist.include = ["src/some_generated_file.txt"]
#sdist.exclude = [".github"]

[tool.pytest.ini_options]
testpaths = ["tests"]

#'-DCMAKE_LIBRARY_OUTPUT_DIRECTORY=' + extdir,
#'-DMORPHIO_VERSION_STRING=' + self.distribution.get_version(),
#'-DPYTHON_EXECUTABLE=' + sys.executable,
