[build-system]
requires = [
    "scikit-build-core>=0.10,<1",
    # use h5py's hdf5 install on Windows so we don't have to redistribute hdf5
    'h5py; platform_system == "Windows"'
]
build-backend = "scikit_build_core.build"

[project]
name = "MorphIO"
description = "A neuron morphology IO library"
readme = "README.rst"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Blue Brain Project, EPFL" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: Apache Software License v2.0",
]
keywords = [
  "computational neuroscience",
  "morphology",
  "neuron",
  "neurolucida",
  "neuromorphology",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = ["sphinx-bluebrain-theme"]

[project.urls]
Homepage = "https://github.com/BlueBrain/MorphIO"
Repository = "https://github.com/BlueBrain/MorphIO.git"
Documentation = "https://morphio.readthedocs.io/"
Tracker = "https://github.com/BlueBrain/MorphIO/issues"

[tool.scikit-build]
build.targets = ["_morphio"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.packages = [ 'morphio', 'morphio.mut', 'morphio.vasculature' ]
cmake.args = [
    "-DHIGHFIVE_EXAMPLES=OFF",
    "-DHIGHFIVE_UNIT_TESTS=OFF",
    "-DMORPHIO_TESTS=OFF",
    "-DMorphIO_CXX_WARNINGS=OFF",
    "-GNinja",
    ]
#sdist.include = ["src/some_generated_file.txt"]
#sdist.exclude = [".github"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]

